2001-02-03  Tom Tromey  <tromey@redhat.com>

	* automake.in (handle_configure): Don't modify variable which
	aliases list element.  Don't push @inputs onto the dist list.
	Fixes colon7.test.
	(initialize_per_input) [dist_dirs]: New variable.
	(handle_dist_worker): Use global dist_dirs.
	(handle_configure): Set dist_dirs entries at toplevel.

2001-02-02  Gordon Sadler <gbsadler1@lcisp.com>

	* automake.texi (Java Support): Added index, @section.

2001-02-02  Pavel Roskin  <proski@gnu.org>

	* automake.in (scan_autoconf_traces): Restore trace messages.

	* automake.in (handle_aclocal_m4): Fix stripping of the initial
	"./" from the dependencies of aclocal.m4.
	Reported by Ralf Corsepius.

2001-02-01  Pavel Roskin  <proski@gnu.org>

	* aclocal.in: Rename "verbosity" to "verbose". Always prepend
	"aclocal: " to the verbose output.

	* automake.in: Remove all debugging messages.

2001-01-31  Akim Demaille  <akim@epita.fr>

	* automake.in (add_depend2): Quote properly $obj and $source.

2001-01-31  Akim Demaille  <akim@epita.fr>

	* depend2.am: Instead of replacing @PFX@ in $(@PFX@COMPILE), and
	then replacing `$(@PFX@COMPILE)' for the files that need some
	special flags, use only @COMPILE@.  Similarly for @LTCOMPILE@.
	Try to document this file.
	* automake.in (add_depend2): Adjust to these changes.

2001-01-31  Akim Demaille  <akim@epita.fr>

	* automake.in (%factored_dependencies): New.
	(file_contents): Use it.
	(handle_phony): Rename as...
	(handle_factored_dependencies): this.
	* subdirs.am: No need for convolved syntax to declare .PHONY.

2001-01-31  Akim Demaille  <akim@epita.fr>

	* automake.in: maintainer-check fixes.

2001-01-31  Akim Demaille  <akim@epita.fr>

	* automake.in (file_contents): Rewrite: instead of trying to parse
	it line by line, first swallow it completely into $CONTENTS,
	*then*, parse it *paragraph* by paragraph.

2001-01-30  Akim Demaille  <akim@epita.fr>

	* automake.in (file_contents): Remove.