@@ -4702,10 +4702,16 @@ sub scan_one_autoconf_file
 
         if (/A(C|M)_PROG_LIBTOOL/)
 	{
-	    if (/AM_PROG_LIBTOOL/)
-	    {
-	    	&am_conf_line_warning ($filename, $., "\`AM_PROG_LIBTOOL' is obsolete, use \`AC_PROG_LIBTOOL' instead");
-	    }
+	    # We're not ready for this yet.  People still use a
+	    # libtool with no AC_PROG_LIBTOOL.  Once that is the
+	    # dominant version we can reenable this code -- but next
+	    # time by mentioning the macro in %obsolete_macros, both
+	    # here and in aclocal.in.
+
+	    # if (/AM_PROG_LIBTOOL/)
+	    # {
+	    # 	&am_conf_line_warning ($filename, $., "\`AM_PROG_LIBTOOL' is obsolete, use \`AC_PROG_LIBTOOL' instead");
+	    # }
 	    $seen_libtool = 1;
 	    $libtool_line = $.;
 	    $configure_vars{'LIBTOOL'} = $filename . ':' . $.;
