@@ -1,5 +1,8 @@
 2001-02-03  Tom Tromey  <tromey@redhat.com>
 
+	* automake.in (scan_one_autoconf_file): Disable warning about
+	AM_PROG_LIBTOOL.
+
 	* automake.in (handle_configure): Don't modify variable which
 	aliases list element.  Don't push @inputs onto the dist list.
 	Fixes colon7.test.
